# infineon-trial-cpp

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
include/: ThreadSafeQueue.hpp
src/: ClientWindow.cpp  ClientWindow.hpp  Payload.hpp  ServerWidget.cpp  ServerWidget.hpp  ServerWindow.cpp  ServerWindow.hpp  main.cpp
